kubernetes/apps/app-cluster/web/glance/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: web
  annotations:
    external-dns.alpha.kubernetes.io/hostname: glance.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Lightweight landing page"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - web"
    gethomepage.dev/href: "https://glance.krapulax.dev"
    gethomepage.dev/icon: "glance.png"
    gethomepage.dev/name: "Glance"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - glance.krapulax.dev
  rules:
    - backendRefs:
        - name: glance
          namespace: web
          port: 80
